# substrate-dex

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  developer.json  restart.sh  start.sh
.github/workflows/: rust.yml
client/transactions-api/: config.js  index.js  package.json
docs/: index.md  installation.md
examples/: hello.rs
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  service.rs
pallets/token/: Cargo.toml
pallets/token/src/: lib.rs  mock.rs  tests.rs
pallets/trade/: Cargo.toml
pallets/trade/src/: lib.rs  mock.rs  tests.rs  types.rs
runtime/: Cargo.toml  build.rs
runtime/src/: 1.rs  expanded.rs  expanded1.rs  kitties.rs  lib.rs  linked_item.rs  template.rs  token.rs  trade.rs  types.rs  utils.rs
runtime/tests/: mod.rs
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
src/: chain_spec.rs  main.rs  service.rs
