[package]
name = "substrate-dex"
version = "2.0.0"
authors = ["alexxu"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "substrate-dex"
path = "src/main.rs"

[dependencies.sp-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '85de8d95188928e901c444a195bd785407c325cb'

[dependencies.sc-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '85de8d95188928e901c444a195bd785407c325cb'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
rev = '85de8d95188928e901c444a195bd785407c325cb'

[dependencies.sc-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '85de8d95188928e901c444a195bd785407c325cb'

[dependencies.sc-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '85de8d95188928e901c444a195bd785407c325cb'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
rev = '85de8d95188928e901c444a195bd785407c325cb'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = '85de8d95188928e901c444a195bd785407c325cb'

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = '85de8d95188928e901c444a195bd785407c325cb'

[dependencies.sc-network]
git = 'https://github.com/paritytech/substrate.git'
rev = '85de8d95188928e901c444a195bd785407c325cb'

[dependencies.sc-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
rev = '85de8d95188928e901c444a195bd785407c325cb'

[dependencies.sp-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
rev = '85de8d95188928e901c444a195bd785407c325cb'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
rev = '85de8d95188928e901c444a195bd785407c325cb'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'sc-finality-grandpa'
rev = '85de8d95188928e901c444a195bd785407c325cb'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-finality-grandpa'
rev = '85de8d95188928e901c444a195bd785407c325cb'

[dependencies.sc-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '85de8d95188928e901c444a195bd785407c325cb'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
rev = '85de8d95188928e901c444a195bd785407c325cb'

[dependencies.sc-basic-authority]
git = 'https://github.com/paritytech/substrate.git'
rev = '85de8d95188928e901c444a195bd785407c325cb'

[dependencies]
futures = "0.3.1"
futures01 = { package = "futures", version = "0.1.29" }
ctrlc = { version = "3.1.3", features = ["termination"] }
log = "0.4.8"
tokio = "0.1.22"
parking_lot = "0.9.0"
codec = { package = "parity-scale-codec", version = "1.0.0" }
trie-root = "0.15.2"
substrate-dex-runtime = { version = "2.0.0", path = "runtime" }

[build-dependencies]
vergen = "3.0.4"
build-script-utils = { git = 'https://github.com/paritytech/substrate.git', package = 'substrate-build-script-utils', rev = '85de8d95188928e901c444a195bd785407c325cb' }

