[package]
authors = ['Anonymous']
description = 'FRAME pallet template'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-trade'
repository = 'https://github.com/paritytech/substrate/'
version = '2.0.0-alpha.5'

[dependencies]
byteorder = { version = "1.3.1", default-features = false }
num-traits = { version = "0.2.8", default-features = false }

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.2.0'

[dependencies.frame-support]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.balances]
package = 'pallet-balances'
default-features = false
version = '2.0.0-alpha.5'

[dependencies.randomness-collective-flip]
package = 'pallet-randomness-collective-flip'
default-features = false
version = '2.0.0-alpha.5'

[dependencies.safe-mix]
default-features = false
version = '1.0.0'

[dependencies.system]
default-features = false
package = 'frame-system'
version = '2.0.0-alpha.5'

[dependencies.sp-std]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.sp-runtime]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.sp-arithmetic]
default-features = false
version = '2.0.0-alpha.5'

[dev-dependencies.sp-io]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.sp-core]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.token]
default-features = false
package = 'pallet-token'
path = '../token'
version = '2.0.0-alpha.5'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'balances/std',
    'randomness-collective-flip/std',
    'safe-mix/std',
    'system/std',
    'sp-std/std',
    'sp-runtime/std',
    'sp-arithmetic/std',
    'sp-io/std',
    'sp-core/std'
]