[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'Substrate FRAME pallet trade'
edition = '2018'
homepage = 'https://substrate.io'
license = 'Unlicense'
name = 'pallet-trade'
repository = 'https://github.com/paritytech/substrate/'
version = '2.0.0-alpha.8'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
byteorder = { version = "1.3.1", default-features = false }
num-traits = { version = "0.2.8", default-features = false }

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.balances]
default-features = false
package = 'pallet-balances'
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.system]
package = 'frame-system'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.safe-mix]
default-features = false
version = '1.0.0'

[dependencies.randomness-collective-flip]
package = 'pallet-randomness-collective-flip'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.sp-arithmetic]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.token]
default-features = false
package = 'pallet-token'
path = '../token'
version = '2.0.0-alpha.8'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'balances/std',
    'randomness-collective-flip/std',
    'safe-mix/std',
    'system/std',
    'sp-std/std',
    'sp-runtime/std',
    'sp-arithmetic/std',
    'sp-io/std',
    'sp-core/std'
]
